Mon Jul 25 2016
1. Bug fixing
   * Correctly use the new data passed into "newdata" parameter of predict function

Mon Jul 18 2016
1. Bug fixing
   * Correctly check whether the model is cross-classified when calculating the model hierarchy
   * Drop unused factors when calculating the complete-case group information

Tue May 24 2016
1. Bug fixing
   * Fix incorrect common coefficients with categorical variables

Mon May 23 2016
1. Bug fixing
   * Correct the parameter ordering to match that in the formula

2. Changes
   * Add initial support for model comparison tables via the memisc package
   * Model fit objects now contain contrast information for factor variables in the model

Wed Apr 27 2016
1. Changes
   * Avoid message from texreg when the R2MLwiN package is loaded
   * Update model comparisons in demos to use the texreg package

Tue Apr 26 2016
1. Changes
   * Add initial support for model comparison tables via the texreg package

Thu Apr 21 2016
1. Changes
   * Allow variables that contain a "." character to work with formulae

Mon Apr 11 2016
1. Changes
   * Use "get" function for clearing "foreach" package globals and updating the formula to satisfy CRAN checks

Wed Feb 03 2016
1. Changes
   * If a denominator is not specified generate a column of ones and use that instead

Tue Jan 05 2015
1. Changes
   * Run multiple MCMC seed example as parallel chains

Thu Dec 17 2015
1. Changes
   * Add group size summary information for non-missing data to the hierarchy slot

Wed Dec 16 2015
1. Changes
   * Return imputed datasets as a list of dataframes (in the imputations slot). This matches the input required by the mitools package.

Tue Dec 15 2015
1. Bug fixing
   * Ignore missing values when checking that responses have valid values

Fri Dec 04 2015
1. Changes
   * Add option to turn on simple notation when in debug mode

Thu Dec 03 2015
1. Changes
   * Turn off reserved column overwrite warning in generated macro

Fri Nov 27 2015
1. Changes